--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,71 +1,98 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Clipmaker MVP</title>
-    <link rel="stylesheet" href="/static/styles.css" />
-  </head>
-  <body>
-    <main class="container">
-      <header>
-        <h1>Clipmaker MVP</h1>
-        <p>Upload audio, generate scenes, and render a demo video.</p>
-      </header>
 
-      <section class="panel">
-        <h2>Create project</h2>
-        <div class="form-row">
-          <label>
-            Format
-            <select id="format">
-              <option value="9:16">9:16 (Reels/TikTok)</option>
-              <option value="16:9">16:9 (YouTube)</option>
-            </select>
-          </label>
-          <label>
-            Style
-            <select id="style">
-              <option value="cinematic">Cinematic</option>
-              <option value="anime">Anime</option>
-              <option value="illustration">Illustration</option>
-              <option value="abstract">Abstract</option>
-            </select>
-          </label>
-          <label class="checkbox">
-            <input type="checkbox" id="subtitles" checked />
-            Subtitles
-          </label>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Clipmaker MVP</title>
+  <link rel="stylesheet" href="/static/styles.css" />
+</head>
+
+<body>
+  <main class="container">
+    <header>
+      <h1>Clipmaker MVP</h1>
+      <p>Upload audio, generate scenes, and render a demo video.</p>
+    </header>
+
+    <section class="panel">
+      <h2>Open Project</h2>
+      <div class="form-row">
+        <select id="project-list" style="flex-grow: 1;">
+          <option value="">Loading projects...</option>
+        </select>
+        <button id="open-project">Open</button>
+      </div>
+    </section>
+
+    <section class="panel">
+      <h2>Create project</h2>
+      <div class="form-row">
+        <label>
+          Format
+          <select id="format">
+            <option value="9:16">9:16 (Reels/TikTok)</option>
+            <option value="16:9">16:9 (YouTube)</option>
+          </select>
+        </label>
+        <label>
+          Style
+          <select id="style">
+            <option value="cinematic">Cinematic</option>
+            <option value="anime">Anime</option>
+            <option value="illustration">Illustration</option>
+            <option value="abstract">Abstract</option>
+          </select>
+        </label>
+        <label class="checkbox">
+          <input type="checkbox" id="subtitles" checked />
+          Subtitles
+        </label>
+      </div>
+      <button id="create-project">Create</button>
+      <div id="project-info" class="muted"></div>
+    </section>
+
+    <section class="panel">
+      <h2>Upload audio</h2>
+      <input type="file" id="audio-file" accept="audio/*" />
+      <button id="upload-audio">Upload</button>
+      <div id="upload-status" class="muted"></div>
+      <audio id="audio-player" controls style="width: 100%; margin-top: 10px; display: none;"></audio>
+    </section>
+
+    <section class="panel">
+      <h2>Generate</h2>
+      <button id="run-pipeline">Run pipeline</button>
+      <button id="refresh-jobs">Refresh status</button>
+      <div id="pipeline-progress-container" class="progress-container" style="display: none;">
+        <div class="progress-label">Pipeline: <span id="pipeline-progress-pct">0</span>%</div>
+        <div class="progress-bg">
+          <div id="pipeline-progress-fill" class="progress-fill"></div>
         </div>
-        <button id="create-project">Create</button>
-        <div id="project-info" class="muted"></div>
-      </section>
+        <div id="pipeline-step" class="muted" style="font-size: 0.8rem; margin-top: 4px;"></div>
+      </div>
+      <pre id="jobs-status" class="code-block"></pre>
+    </section>
 
-      <section class="panel">
-        <h2>Upload audio</h2>
-        <input type="file" id="audio-file" accept="audio/*" />
-        <button id="upload-audio">Upload</button>
-        <div id="upload-status" class="muted"></div>
-      </section>
+    <section class="panel">
+      <h2>Scenes</h2>
+      <div id="scenes" class="scenes"></div>
+    </section>
 
-      <section class="panel">
-        <h2>Generate</h2>
-        <button id="run-pipeline">Run pipeline</button>
-        <button id="refresh-jobs">Refresh status</button>
-        <pre id="jobs-status" class="code-block"></pre>
-      </section>
+    <section class="panel">
+      <h2>Render</h2>
+      <button id="render-project">Render video</button>
+      <div id="render-progress-container" class="progress-container" style="display: none;">
+        <div class="progress-label">Rendering: <span id="render-progress-pct">0</span>%</div>
+        <div class="progress-bg">
+          <div id="render-progress-fill" class="progress-fill"></div>
+        </div>
+      </div>
+      <div id="render-output" class="muted"></div>
+    </section>
+  </main>
+  <script src="/static/app.js"></script>
+</body>
 
-      <section class="panel">
-        <h2>Scenes</h2>
-        <div id="scenes" class="scenes"></div>
-      </section>
-
-      <section class="panel">
-        <h2>Render</h2>
-        <button id="render-project">Render video</button>
-        <div id="render-output" class="muted"></div>
-      </section>
-    </main>
-    <script src="/static/app.js"></script>
-  </body>
 </html>
