feat: Implement initial project management schemas, audio analysis service, and basic frontend UI for the Clipmaker MVP.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -52,6 +52,12 @@
               placeholder="Describe what happens in the video (e.g. 'A robot exploring a ruined city', 'Abstract shapes dancing to the beat')..."
               style="width:100%; resize: vertical; margin-bottom: 8px; border: 1px solid #e2e8f0; border-radius: 4px; padding: 8px;"></textarea>
           </div>
+          <div class="form-row">
+            <label style="display:block; margin-bottom:4px">Character Description</label>
+            <textarea id="character-description" rows="2"
+              placeholder="Describe the main character (e.g. 'Young woman with blue hair', 'A cute robot'). Leaves consistent across scenes."
+              style="width:100%; resize: vertical; margin-bottom: 8px; border: 1px solid #e2e8f0; border-radius: 4px; padding: 8px;"></textarea>
+          </div>
           <button id="create-project" style="width: 100%">Create Project</button>
           <div id="project-info" class="muted"></div>
         </section>
