feat: Add initial project management, segment schemas, image generation service, and a new web interface.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -136,7 +136,7 @@
       </div>
     </div>
   </main>
-  <script src="/static/app.js?v=20240117"></script>
+  <script src="/static/app.js?v=20240118_v2"></script>
 </body>
 
 </html>
