feat: Add storyboard generation service with API and frontend integration.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -73,7 +73,8 @@
         <section class="panel">
           <h2>Actions</h2>
           <button id="run-pipeline" style="width: 100%; margin-bottom: 10px;">Generate Scenes</button>
-          <button id="render-project" style="width: 100%">Render Video</button>
+          <button id="render-project" style="width: 100%; margin-bottom: 10px;">Render Video</button>
+          <button id="recalculate-timings" class="secondary-btn" style="width: 100%">Recalculate Timings</button>
           <div id="pipeline-progress-container" class="progress-container" style="display: none;">
             <div class="progress-label">Pipeline: <span id="pipeline-progress-pct">0</span>%</div>
             <div class="progress-bg">
