feat: Implement initial Clipmaker application infrastructure including project management, audio analysis, AI-driven video generation, and a basic frontend.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -44,6 +44,13 @@
               </select></label>
           </div>
           <div class="form-row compact">
+            <label>Render Speed <select id="render-preset">
+                <option value="fast">Fast (Balanced)</option>
+                <option value="veryfast">Very Fast</option>
+                <option value="ultrafast">Ultra Fast (Low Quality)</option>
+              </select></label>
+          </div>
+          <div class="form-row compact">
             <label class="checkbox"><input type="checkbox" id="subtitles" checked /> Subtitles</label>
           </div>
           <div class="form-row">
