Improve landing page mobile spacing

--- a/frontend-react/index.html
+++ b/frontend-react/index.html
@@ -5,11 +5,59 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Clipmaker - AI-powered video generation from audio" />
-    <title>Clipmaker</title>
+    <title>HukFlow — Make music visible.</title>
+    <meta
+        name="description"
+        content="HukFlow helps you turn music into cinematic visuals with AI-driven scene generation, timelines, and fast previews."
+    />
+    <link rel="canonical" href="https://hukflow.com/" />
+
+    <meta property="og:title" content="HukFlow — Make music visible." />
+    <meta
+        property="og:description"
+        content="HukFlow helps you turn music into cinematic visuals with AI-driven scene generation, timelines, and fast previews."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://hukflow.com/" />
+    <meta property="og:image" content="/og-hukflow.svg" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="HukFlow — Make music visible." />
+    <meta
+        name="twitter:description"
+        content="HukFlow helps you turn music into cinematic visuals with AI-driven scene generation, timelines, and fast previews."
+    />
+    <meta name="twitter:image" content="/og-hukflow.svg" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <script type="application/ld+json">
+        {
+          "@context": "https://schema.org",
+          "@graph": [
+            {
+              "@type": "Organization",
+              "name": "HukFlow",
+              "url": "https://hukflow.com/",
+              "sameAs": [
+                "https://x.com/hukflow",
+                "https://www.youtube.com/@hukflow"
+              ]
+            },
+            {
+              "@type": "WebSite",
+              "name": "HukFlow",
+              "url": "https://hukflow.com/",
+              "potentialAction": {
+                "@type": "SearchAction",
+                "target": "https://hukflow.com/?q={search_term_string}",
+                "query-input": "required name=search_term_string"
+              }
+            }
+          ]
+        }
+    </script>
 </head>
 
 <body>
