feat: Establish initial application structure with React frontend, FastAPI backend, and landing page with video showcase.

--- a/frontend-react/index.html
+++ b/frontend-react/index.html
@@ -2,37 +2,41 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>HukFlow — Make music visible.</title>
-    <meta
-        name="description"
-        content="HukFlow helps you turn music into cinematic visuals with AI-driven scene generation, timelines, and fast previews."
-    />
-    <link rel="canonical" href="https://hukflow.com/" />
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>HukFlow — Make music visible.</title>
+  <meta name="description"
+    content="HukFlow helps you turn music into cinematic visuals with AI-driven scene generation, timelines, and fast previews." />
+  <link rel="canonical" href="https://hukflow.com/" />
 
-    <meta property="og:title" content="HukFlow — Make music visible." />
-    <meta
-        property="og:description"
-        content="HukFlow helps you turn music into cinematic visuals with AI-driven scene generation, timelines, and fast previews."
-    />
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://hukflow.com/" />
-    <meta property="og:image" content="/og-hukflow.svg" />
+  <meta property="og:title" content="HukFlow — Make music visible." />
+  <meta property="og:description"
+    content="HukFlow helps you turn music into cinematic visuals with AI-driven scene generation, timelines, and fast previews." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://hukflow.com/" />
+  <meta property="og:image" content="/og-hukflow.svg" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="HukFlow — Make music visible." />
-    <meta
-        name="twitter:description"
-        content="HukFlow helps you turn music into cinematic visuals with AI-driven scene generation, timelines, and fast previews."
-    />
-    <meta name="twitter:image" content="/og-hukflow.svg" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="HukFlow — Make music visible." />
+  <meta name="twitter:description"
+    content="HukFlow helps you turn music into cinematic visuals with AI-driven scene generation, timelines, and fast previews." />
+  <meta name="twitter:image" content="/og-hukflow.svg" />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <script type="application/ld+json">
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-L0R27KPKGZ"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-L0R27KPKGZ');
+  </script>
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <script type="application/ld+json">
         {
           "@context": "https://schema.org",
           "@graph": [
@@ -61,8 +65,8 @@
 </head>
 
 <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
 </body>
 
 </html>
